# SmallOperatingSystem-Project_ATmega32-Sprints

./: LICENSE  README.md
Documents/Diagrams/: sos_state_machine.puml
SOS/: CMakeLists.txt  SOS.atsln  SOS.componentinfo.xml  SOS.cproj  main.c
SOS/APP/: CFile1.c  app.c  app.h
SOS/ECUAL/button/: CFile1.c  btn_interface.h  btn_program.c
SOS/ECUAL/led/: CFile1.c  led_interface.h  led_program.c
SOS/LIB/: bit_math.h  std.h
SOS/MCAL/dio/: CFile1.c  dio_interface.h  dio_private.h  dio_program.c
SOS/MCAL/exi/: CFile1.c  exi_cfg.c  exi_cfg.h  exi_interface.h  exi_private.h  exi_program.c
SOS/MCAL/timer/: timer_cfg.c  timer_cfg.h  timer_interface.h  timer_private.h  timer_program.c
SOS/SERV/sos/: sos_interface.h  sos_preconfig.h  sos_private.h  sos_program.c
Simulation/: SOS.hex  sos.pdsprj
